[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Objects/GrapplingHook.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game/Objects/hook.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Objects/GrapplingRope.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Game/Objects/hook_end.gd" type="Script" id=4]

[node name="Hook" type="Node2D"]
script = ExtResource( 2 )

[node name="HookRope" type="Node2D" parent="."]
rotation = 0.785398
scale = Vector2( 1, 1 )

[node name="HookRopeV" type="TextureProgress" parent="HookRope"]
margin_left = 2.0
margin_top = -1602.0
margin_right = 1602.0
margin_bottom = -2.0
max_value = 1600.0
texture_progress = ExtResource( 3 )
fill_mode = 3

[node name="HookRopeH" type="TextureProgress" parent="HookRope"]
margin_left = 2.0
margin_top = -1602.0
margin_right = 1602.0
margin_bottom = -2.0
max_value = 1600.0
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HookEnd" type="RigidBody2D" parent="."]
gravity_scale = 0.0
script = ExtResource( 4 )

[node name="HookSprite" type="Sprite" parent="HookEnd"]
position = Vector2( 18, 9.53674e-07 )
rotation = 0.785398
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HookEnd"]
position = Vector2( -26, 0 )
rotation = 0.785398
scale = Vector2( 1, 1 )
polygon = PoolVector2Array( 25, -29, 33, -37, 33, -40, 26, -41, 26, -42, 31, -47, 36, -47, 38, -45, 39, -43, 41, -41, 43, -40, 46, -37, 46, -33, 44, -31, 41, -27, 40, -27, 40, -34, 37, -34, 29, -26 )
